Fix: Header: Admin glyph was wrapping
Fixed by removing the unnecessary margin
on the right-most glyph.

--- a/server/front-end/public/css/base.css
+++ b/server/front-end/public/css/base.css
@@ -239,6 +239,10 @@ button:focus {
   opacity: 0.25;
   text-decoration: none;
 }
+.header .glyph.right-most {
+  margin-right: 0;
+}
+
 .header .glyph.active {
   color: gold;
   opacity: 1;
